prototypes/linkwarden/ytt/linkwarden-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linkwarden
  name: linkwarden
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: linkwarden
  type: ClusterIP
