prototypes/linkwarden/ytt/linkwardendb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linkwarden-db
  name: linkwarden-db
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: linkwarden-db
  type: ClusterIP
